--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -1,63 +1,75 @@
+<% webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(@presenter.webgl_id, 'webgl')) %>
 <% content_for :head do %>
   <meta name="turbolinks-cache-control" content="no-cache">
-<% end
-webgl_id = @presenter.webgl_id
-webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 'webgl'))
-@unity_loader = "/webgl/#{webgl_id}/#{webgl.unity_loader}"
-@unity_json = "/webgl/#{webgl_id}/#{webgl.unity_json}"
-%>
-<script src="<%= @unity_loader %>"></script>
-<script>
-  // this has to go right after @unity_loader is loaded to guarantee no random JS errors get alert-boxed
-  UnityLoader.Error.handler = function(e, t){
-    // NOP to stop the nuisance alert boxes for *all* (even non-Unity) JS errors
-  }
-</script>
-<script>
-  var gameInstance = undefined;
-  var gameReady = false;
-  // Toggling for focus of canvas
-  function GameControlReady () {
-    gameReady = true;
-  }
+  <link rel="stylesheet" href="/webgl/<%= @presenter.webgl_id %>/TemplateData/style.css">
+  <script src="/webgl/<%= webgl.unity_loader %>"></script>
+  <script>
+    var config = {
+      dataUrl: "/webgl/<%= webgl.unity_data %>",
+      frameworkUrl: "/webgl/<%= webgl.unity_framework %>",
+      codeUrl: "/webgl/<%= webgl.unity_code %>",
+      streamingAssetsUrl: "StreamingAssets",
+    };
 
-  // Take user to a POI when passed a string from WebGL
-  function goToParagraph(p) {
-    var paragraphHandle = "https://hdl.handle.net/2027/fulcrum.9231782/" + "par" + p;
-    $('#paragraphHandle').html('<a href="' + paragraphHandle + '" target="_blank">' + paragraphHandle + '</a>');
-    $('#goToParagraphModal').modal();
-  }
+    var gameInstance = undefined;
+    var gameReady = false;
 
-  $(document).on('turbolinks:load', function() {
-    // load the webgl if the webgl tab is already active
-    if ($('#webgl-tab').hasClass('active') || window.location.hash == '#webgl') {
+    function FocusCanvas(focus) {
+      if (gameReady) {
+        gameInstance.SendMessage("GameControl","FocusCanvas", focus);
+      }
+    }
 
+    // Toggling for focus of canvas
+    function GameControlReady () {
+      gameReady = true;
+    }
+
+    // Take user to a POI when passed a string from WebGL
+    function goToParagraph(p) {
+      var paragraphHandle = "https://hdl.handle.net/2027/fulcrum.9231782/" + "par" + p;
+      $('#paragraphHandle').html('<a href="' + paragraphHandle + '" target="_blank">' + paragraphHandle + '</a>');
+      $('#goToParagraphModal').modal();
+      gameInstance.SetFullscreen(0);
+    }
+
+    function setupWebGlCanvas () {
       if (heliotropeIncompatibleWebGlUser === true) {
-        $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, it looks like your device or browser is not compatible with WebGL.<br />Please check our <a href="https://hdl.handle.net/2027/fulcrum.9231782/about">compatibility requirements</a>.</div>');
+        $('#unity-container').html('<div id="epub-webgl-mobile-message">Sorry, it looks like your device or browser is not compatible with WebGL.<br />Please check our <a href="https://hdl.handle.net/2027/fulcrum.9231782/about">compatibility requirements</a>.</div>');
       }
       else if (typeof gameInstance === 'undefined' ) {
+        var canvas = document.querySelector("#unity-canvas");
+        var loadingBar = document.querySelector("#unity-loading-bar");
+        var progressBarFull = document.querySelector("#unity-progress-bar-full");
+        var fullscreenButton = document.querySelector("#unity-fullscreen-button");
 
+        loadingBar.style.display = "block";
 
-        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>");
+        createUnityInstance(canvas, config, (progress) => {
+          progressBarFull.style.width = 100 * progress + "%";
+        }).then((unityInstance) => {
+          gameInstance = unityInstance;
+          loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          // For heliotrope we've historically NOP'ed errors from the WebGL game
+          // note I think this only blocks alerts for loading-time errors
+          // alert(message);
+        });
 
-        function FocusCanvas(focus) {
-          if (gameReady) {
-            var SendMessage = gameInstance.SendMessage;
-            SendMessage("GameControl", "FocusCanvas", focus);
-          }
-        }
-
-        document.addEventListener('click', function(e) {
-          if (e.target.id == "#canvas") {
+        document.addEventListener('click', function (e) {
+          if (e.target.id == "unity-canvas") {
             // Clicked on canvas
             FocusCanvas("1");
-              } else {
+          } else {
             // Clicked outside of canvas
             FocusCanvas("0");
           }
         });
 
-        document.addEventListener('keydown', function(event) {
+        document.addEventListener('keydown', function (event) {
           if (event.defaultPrevented) {
             return; // Do nothing if the event was already processed
           }
@@ -65,61 +77,41 @@ webgl = Webgl::Unity.from_directory(UnpackService.root_path_from_noid(webgl_id, 
           switch (event.key) {
             case "Tab":
               FocusCanvas("0");
-            break;
+              break;
             default:
-            return;
+              return;
           }
 
         }, true);
       }
     }
-    // or load the webgl if the tab is clicked
-    $("a[href='#webgl']").bind('click', function() {
 
-      if (heliotropeIncompatibleWebGlUser === true) {
-        $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, it looks like your device or browser is not compatible with WebGL.<br />Please check our <a href="https://hdl.handle.net/2027/fulcrum.9231782/about">compatibility requirements</a>.</div>');
+    $(document).on('turbolinks:load', function() {
+      // load the webgl if the webgl tab is already active
+      if ($('section#webgl').hasClass('active') || window.location.hash == '#webgl') {
+        setupWebGlCanvas();
       }
-      else if (typeof gameInstance === 'undefined' ) {
-
-        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>");
-
-        function FocusCanvas(focus) {
-          if (gameReady) {
-            var SendMessage = gameInstance.SendMessage;
-            SendMessage("GameControl", "FocusCanvas", focus);
-          }
-        }
-
-        document.addEventListener('click', function(e) {
-          if (e.target.id == "#canvas") {
-            // Clicked on canvas
-            FocusCanvas("1");
-              } else {
-            // Clicked outside of canvas
-            FocusCanvas("0");
-          }
-        });
-
-        document.addEventListener('keydown', function(event) {
-          if (event.defaultPrevented) {
-            return; // Do nothing if the event was already processed
-          }
-
-          switch (event.key) {
-            case "Tab":
-              FocusCanvas("0");
-            break;
-            default:
-            return;
-          }
-
-        }, true);
-      }
+      // or load the webgl if the tab is clicked
+      $("a[href='#webgl']").bind('click', function() {
+        setupWebGlCanvas();
+      });
     });
-  });
-</script>
-<div class="webgl-content">
-  <div id="gameContainer" style="width: 1024px; height: 600px" tabindex="0"></div>
+  </script>
+
+<% end %>
+
+<div id="unity-container" style="position:relative" tabindex="0">
+  <canvas id="unity-canvas"></canvas>
+  <div id="unity-loading-bar">
+    <div id="unity-logo"></div>
+    <div id="unity-progress-bar-empty">
+      <div id="unity-progress-bar-full"></div>
+    </div>
+  </div>
+  <div id="unity-footer">
+    <div id="unity-webgl-logo"></div>
+    <div id="unity-fullscreen-button"></div>
+  </div>
 </div>
 
 <div class="modal fade" id="goToParagraphModal" tabindex="-1" role="dialog" aria-labelledby="goToParagraphModalLabel">
