HELIO-3635 - add function for tomb links from text to 3d model; position 3d model and database after the TOC buttons but before Resources button

--- a/app/views/e_pubs/_cozy_controls_bottom.html.erb
+++ b/app/views/e_pubs/_cozy_controls_bottom.html.erb
@@ -6,6 +6,9 @@
         contents.addTo(reader);
         <% end %>
 
+        // WebGL and Database widgets
+        <%= render "webgl_specific", presenter: @presenter, parent_presenter: @parent_presenter %>
+
         // Resources
         <% if @parent_presenter.assets? %>
         cozy.control.widget.button({
