HELIO-3635 - case sensitive typo

--- a/app/views/e_pubs/_webgl_specific.html.erb
+++ b/app/views/e_pubs/_webgl_specific.html.erb
@@ -31,7 +31,7 @@
 
           if (! $panel.length) {
               var title = document.title;
-              var vol_1 = "A Mid-Republican House from Gabii";
+              var vol_1 = "A Mid-Republican House From Gabii";
               if (title.includes(vol_1)) { 
                 var $3d_title = "Gabii Area B 3D Model";
                 var $3d_doi = "https://doi.org/10.3998/mpub.9231782.model";
