HELIO-3936 - add auto height to bar brand logo

--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -2143,6 +2143,7 @@ $barpublishing-white: #fff;
     .navbar-brand {
       @include arial;
       color: $barpublishing-white;
+      height: auto;
     }
 
     .navbar-nav {
