--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -2,7 +2,36 @@
 // HELIOTROPE BASE THEME
 // Place standard styling of app here
 // Press related overrides go in themes.scss
-///////////////////////////////////////////
+
+///////////////////////////////////////////////
+// colors
+$base-color-header-color: #fafafa;
+$base-color-header-background: #342f2e;
+$base-color-header-link: #73d2f4;
+$base-color-header-link-hover: #00AFEC;
+
+$base-color-alert-box-background: pink;
+$base-color-alert-box-border: red;
+$base-color-alert-box-color: #342f2e;
+$base-color-alert-box-link: #342f2e;
+$base-color-alert-box-link-hover: #ddd;
+
+$base-color-background: #fafafa;
+$base-color-box-color: #342f2e;
+$base-color-box-background: #fafafa;
+$base-color-box-border: #342f2e;
+$base-color-button: #fff;
+$base-color-button-background: #655a52;
+$base-color-button-hover: #ddd;
+$base-color-color: #342f2e;
+$base-color-link: #73d2f4;
+$base-color-link-hover: #73d2f4;
+
+$base-color-footer-color: #fafafa;
+$base-color-footer-background: #342f2e;
+$base-color-footer-link: #73d2f4;
+$base-color-footer-link-hover: #73d2f4;
+
 ///////////////////////////////////
 // UTILITY
 ///////////////////////////////////
@@ -155,12 +184,22 @@ div.skip {
 }
 
 ///////////////////////////////////
+// BRAND AUTH
+///////////////////////////////////
+
+.brand-auth {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+}
+
+///////////////////////////////////
 // BREADCRUMBS
 ///////////////////////////////////
 .main-header {
   border-bottom: 0;
   margin-bottom: 0;
-  margin-top: 1em;
 }
 
 .breadcrumbs {
@@ -672,10 +711,56 @@ footer.press {
       img {
         margin-right: .5em;
       }
+
+      &-options {
+        font-weight: normal;
+        font-stretch: normal;
+        color: $base-color-box-color;
+        background-color: $base-color-box-background;
+        margin-top: 0;
+        margin-bottom: 1em;
+        border: 1px solid $base-color-box-border;
+        padding: 1em;
+
+        &-alert {
+          justify-content: space-between;
+          color: $base-color-alert-box-color;
+          background-color: $base-color-alert-box-background;
+          border: 3px solid $base-color-alert-box-border;
+        }
+      }
     }
 
     .edition-link, .edition-links {
       padding-top: 0.5em;
+    }
+  }
+
+  // PURCHASE
+  &-purchase {
+    .back-link {
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      padding: 1em;
+    }
+    .heading {
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .margin-padding {
+      padding-top: 15px;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 0;
+    }
+    .border-padding {
+      border: 3px solid $base-color-box-border;
+      padding-top: 0;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-bottom: 15px;
+      background: $base-color-box-background;
     }
   }
 
@@ -1266,23 +1351,67 @@ footer.press {
   #idpSelectSelectButton {
     width: 35% !important;
   }
-
 }
 
 ///////////////////////////////////
-// PURCHASE
+// AUTHENTICATION
 ///////////////////////////////////
-.purchase {
+.authentication {
+  * {
+    box-sizing: border-box;
+  }
+
+  #searchInstitutionInput {
+    //background-image: url('/css/searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+  }
+
+  #institutionList {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  #institutionList li {
+    border: 1px solid #ddd;
+    margin-top: -1px; /* Prevent double borders */
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block
+  }
+
+  #institutionList li a:hover:not(.header) {
+    background-color: #eee;
+  }
+
+  .back-link {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 1em;
+  }
+
   .heading {
     font-size: 24px;
     font-weight: bold;
   }
+
   .margin-padding {
     padding-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 0;
   }
+
   .border-padding {
     border: black 3px solid;
     padding-top: 0;
@@ -1290,6 +1419,12 @@ footer.press {
     padding-right: 15px;
     padding-bottom: 15px;
     background: #fafafa;
+  }
+
+  .info {
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
   }
 }
 
@@ -1324,7 +1459,6 @@ footer.press {
     margin-bottom: 0;
     -webkit-animation: stretchdelay 1.6s infinite ease-in-out;
     animation: stretchdelay 1.6s infinite ease-in-out;
-
   }
 
   .fulcrum-loading .circ1 {
