--- a/app/views/monograph_catalog/purchase.html.erb
+++ b/app/views/monograph_catalog/purchase.html.erb
@@ -1,15 +1,13 @@
 <% provide :page_title, 'Purchase ' + @presenter.page_title %>
-<div id="maincontent" class="purchase">
-   <div class="row">
-    <div class="col-sm-12 margin-padding">
-      <%= link_to "<< Go back to previous page", monograph_catalog_path(@presenter.id) %>
-    </div>
+<div id="maincontent" class="monograph-purchase">
+  <div class="back-link">
+    <%= link_to "<< Go back to previous page", monograph_catalog_path(@presenter.id) %>
   </div>
   <div class="row">
     <div class="col-sm-8 margin-padding">
       <div class="col-sm-12 border-padding">
         <h1 class="heading">Purchase access</h1>
-        <%= @press_presenter.restricted_message %>
+        <%= @press_presenter.restricted_message&.html_safe %>
       </div>
     </div>
     <div class="col-sm-4 margin-padding">
